package seedu.allonus.modules.exceptions;

/**
 * Signifies a missing module category.
 */
public class ModuleCategoryException extends Exception{
}
