package seedu.allonus.modules.exceptions;

/**
 * Signiifies a missing module code.
 */
public class ModuleCodeException extends Exception{
}
