package seedu.allonus.modules.exceptions;

/**
 * Signifies missing module day.
 */
public class ModuleDayException extends Exception{
}
